fixed up lecture

--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<nav th:fragment="navbar" style="">
+<html xmlns:th="http://www.thymeleaf.org" lang="e">
+<nav th:fragment="navbar" style="background-color: aliceblue">
     <h1>Spring Blog</h1>
 </nav>
-</body>
 </html>
