--- a/src/main/resources/templates/partials/footer.html
+++ b/src/main/resources/templates/partials/footer.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-
-
-</body>
+<html xmlns:th="http://www.thymeleaf.org" lang="e">
+<footer th:fragment="footer">
+    <p>Thanks for reading.</p>
+</footer>
 </html>
