--- a/src/main/resources/templates/post/show.html
+++ b/src/main/resources/templates/post/show.html
@@ -10,6 +10,9 @@
 <div th:text="${postId}">Id</div>
 <div th:text="${post.title}">Title</div>
 <div th:text="${post.body}">Body</div>
-
+<a th:href ="@{|/posts/edit/${postId}|}">Edit Post</a>
+<form th:action ="@{|/posts/delete/${postId}|}"th:method="post">
+    <button type="submit">Delete</button>
+</form>
 </body>
-</html>ml>
+</html>
