--- a/src/main/resources/templates/post/create.html
+++ b/src/main/resources/templates/post/create.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>Edit Post</title>
+    <meta charset="UTF-8">
+    <title>Create Pots</title>
 </head>
 <body>
 
-<form th:action="@{|/posts/edit/${id}|}" th:method="post" th:object="${postToEdit}">
-
+<form th:action="@{/posts/create}" th:method="post" th:object="${post}">
 
   <input type="text" th:field="*{title}" placeholder="title">
   <input type="text" th:field="*{body}" placeholder="body">
