--- a/src/main/resources/templates/post/index.html
+++ b/src/main/resources/templates/post/index.html
@@ -13,6 +13,7 @@
 
     <h3 th:text="${post.title}">Title</h3>
     <h3 th:text="${post.body}"></h3>
+    <p th:text="${post.owner.username}"></p>
 
 </div>
 
