--- a/src/main/resources/templates/post/edit.html
+++ b/src/main/resources/templates/post/edit.html
@@ -5,9 +5,10 @@
   <title>Edit Post</title>
 </head>
 <body>
+<nav th:replace="partials/navbar :: navbar"></nav>
+
 
 <form th:action="@{|/posts/edit/${id}|}" th:method="post" th:object="${postToEdit}">
-
 
   <input type="text" th:field="*{title}" placeholder="title">
   <input type="text" th:field="*{body}" placeholder="body">
