--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -1,5 +1,11 @@
-<html xmlns:th="http://www.thymeleaf.org" lang="e">
+<html xmlns:th="http://www.thymeleaf.org">
 <nav th:fragment="navbar" style="background-color: aliceblue">
-    <h1>Spring Blog</h1>
+    <ul>
+        <li>
+            <form th:action="@{/logout}" th:method="post">
+                <button class="btn-link btn" style="margin-top: 8px">Logout</button>
+            </form>
+        </li>
+    </ul>
 </nav>
 </html>
