--- a/src/main/resources/templates/post/index.html
+++ b/src/main/resources/templates/post/index.html
@@ -1,21 +1,26 @@
+
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="partials/head :: head('Spring Blog | All Post')">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<head th:replace="partials/head :: head('Spring Blog | All Posts')">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<nav th:replace ="partials/navbar :: navbar"></nav>
+<nav th:replace="partials/navbar :: navbar"></nav>
 
-<h3>Viewing All Posts</h3>
+<h2>Viewing All Posts</h2>
 
-<div th:each="post : ${posts}">
+<div sec:authorize="isAuthenticated()" >
 
-    <h3 th:text="${post.title}">Title</h3>
-    <h3 th:text="${post.body}"></h3>
-    <p th:text="${post.owner.username}"></p>
+    <h3>Welcome, <span th:text="${#authentication.principal.username}"/>!!</h3>
 
 </div>
 
+<div th:each="post : ${posts}">
+    <h3 th:text="${post.title}">Title</h3>
+    <div th:text="${post.body}"></div>
+    <p th:text="${post.owner.username}" ></p>
+</div>
 </body>
 </html>
